[ADD] images and [FIX] tab change

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <figcaption>Łazienka po zalaniu – pełny remont, nowe instalacje i wykończenie.</figcaption>
                 </figure>
                 <figure class="project-card">
-                    <img src="img/lazienka-3.jpg" alt="Łazienka po poprzednim nieudanym remoncie" />
+                    <img src="img/b-remont.jpg" alt="Łazienka po poprzednim nieudanym remoncie" />
                     <figcaption>Poprawa po wcześniejszym nieudanym remoncie – prostowanie ścian, nowe płytki i biały montaż.</figcaption>
                 </figure>
             </div>
@@ -194,8 +194,12 @@
                 </article>
                 <article class="review-card">
                     <p class="review-text">
-                        „Bardzo dobra współpraca – terminowo, z doradztwem technicznym
-                        i estetycznym. Uczciwe rozliczenie materiałów i robocizny.”
+                        „Polecam! Uratował naszą łazienkę po poprzednich, nieudolnych wykonawcach – poprawił błędy,
+                        zrobił wszystko solidnie i zgodnie ze sztuką. Widać, że ma doświadczenie, podchodzi do
+                        pracy z dużą starannością, a nawet powiedziałbym, że lubi to co robi.
+                        Na duży plus to, że jest słowny i obecny na zleceniu od rana do końca dnia, a nie „rozwleka”
+                        prac, skacząc między innymi remontami. Korzysta z porządnych narzędzi,
+                        ceny ma racjonalne i dodatkowo wysyła zdjęcia z poszczególnych etapów prac.”
                     </p>
                     <p class="review-meta">Klient z okolic Krakowa</p>
                 </article>
