--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="hero">
         <div class="container hero-inner">
             <div class="hero-text">
-                <h1>Remonty łazienek i wykończenia wnętrz<br />Rzeszotary, Kraków i okolice</h1>
+                <h1>Remonty łazienek i wykończenia wnętrz<br />Kraków i okolice</h1>
                 <p class="hero-lead">
                     Nazywam się <strong>Daniel Falkowski</strong>. Od ponad 20 lat zajmuję się
                     remontami i wykończeniami mieszkań oraz domów – szczególnie
