--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>TETRIS – remonty łazienek i wykończenia wnętrz | Rzeszotary, Kraków i okolice</title>
-    <meta name="description" content="TETRIS – Daniel Falkowski. Ponad 20 lat doświadczenia w remontach łazienek i wykończeniach wnętrz. Rzeszotary, Kraków i okolice. Kompleksowe realizacje, dokładność i terminowość.">
+    <title>TETRIS – remonty łazienek i wykończenia wnętrz | Kraków i okolice</title>
+    <meta name="description" content="TETRIS – Daniel Falkowski. Ponad 20 lat doświadczenia w remontach łazienek i wykończeniach wnętrz. Kraków i okolice. Kompleksowe realizacje, dokładność i terminowość.">
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -68,7 +68,7 @@
             <div class="two-columns">
                 <div>
                     <p>
-                        Prowadzę firmę <strong>TETRIS</strong> z siedzibą w Rzeszotarach (powiat krakowski).
+                        Prowadzę firmę <strong>TETRIS</strong>.
                         Specjalizuję się w remontach i wykończeniach mieszkań oraz domów – w szczególności
                         <strong>łazienek</strong> w blokach i domach jednorodzinnych.
                     </p>
@@ -222,7 +222,7 @@
                         <!-- PODMIEŃ NA PRAWDZIWE DANE -->
                         <li><strong>Telefon:</strong> <a href="tel:+48123456789">+48 123 456 789</a></li>
                         <li><strong>E-mail:</strong> <a href="mailto:kontakt@tetris-remonty.pl">kontakt@tetris-remonty.pl</a></li>
-                        <li><strong>Obszar działania:</strong> Rzeszotary, Kraków i okolice (Małopolskie)</li>
+                        <li><strong>Obszar działania:</strong> Kraków i okolice (Małopolskie)</li>
                     </ul>
                 </div>
                 <div>
