[ADD] services photos

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <figcaption>Łazienka w mieszkaniu w Krakowie – płytki wielkoformatowe, prysznic typu walk-in.</figcaption>
                 </figure>
                 <figure class="project-card">
-                    <img src="img/lazienka-2.jpg" alt="Remont łazienki po zalaniu" />
+                    <img src="img/wooden-bathroom.jpg" alt="Remont łazienki po zalaniu" />
                     <figcaption>Łazienka po zalaniu – pełny remont, nowe instalacje i wykończenie.</figcaption>
                 </figure>
                 <figure class="project-card">
