[ADD] lightbox, scroll-reveal, active state

--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
     </div>
 </footer>
 
-<script>
-    // Ustawianie aktualnego roku w stopce
-    document.getElementById('year').textContent = new Date().getFullYear();
-</script>
+<button class="back-to-top" type="button" aria-label="Wróć na górę strony">
+    ↑
+</button>
+<script src="main.js"></script>
 </body>
 </html>
