[FIX] lightbox and scroll when zoom in image

--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
                         dalsze kroki.
                     </p>
                     <p class="contact-note">
-                        <em>Uwaga:</em> dokładny adres i godziny pracy dopasujemy do tego,
-                        co Daniel chce udostępniać publicznie w internecie.
+<!--                        <em>Uwaga:</em> dokładny adres i godziny pracy dopasujemy do tego,-->
+<!--                        co Daniel chce udostępniać publicznie w internecie.-->
                     </p>
                 </div>
             </div>
