[CHANGE] image url

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div class="projects-grid">
                 <!-- PODMIEŃ ŚCIEŻKI NA RZECZYWISTE ZDJĘCIA -->
                 <figure class="project-card">
-                    <img src="img/lazienka-1.jpg" alt="Wykończona łazienka – płytki wielkoformatowe" />
+                    <img src="img/blackwhite.jpg" alt="Wykończona łazienka – płytki wielkoformatowe" />
                     <figcaption>Łazienka w mieszkaniu w Krakowie – płytki wielkoformatowe, prysznic typu walk-in.</figcaption>
                 </figure>
                 <figure class="project-card">
@@ -220,14 +220,14 @@
                     </p>
                     <ul class="contact-list">
                         <!-- PODMIEŃ NA PRAWDZIWE DANE -->
-                        <li><strong>Telefon:</strong> <a href="tel:+48123456789">+48 123 456 789</a></li>
-                        <li><strong>E-mail:</strong> <a href="mailto:kontakt@tetris-remonty.pl">kontakt@tetris-remonty.pl</a></li>
+                        <li><strong>Telefon:</strong> <a href="tel:+48 883 228 595">+48 883 228 595</a></li>
+                        <li><strong>E-mail:</strong> <a href="mailto:falkowski85@hotmail.com">falkowski85@hotmail.com</a></li>
                         <li><strong>Obszar działania:</strong> Kraków i okolice (Małopolskie)</li>
                     </ul>
                 </div>
                 <div>
                     <p>
-                        Możesz też wysłać wiadomość SMS lub e-mail z krótkim opisem
+                        Możesz też wysłać wiadomość na whatsapp, SMS lub e-mail z krótkim opisem
                         zlecenia (metraż, lokalizacja, termin) – oddzwonię i ustalimy
                         dalsze kroki.
                     </p>
