--- a/index.html
+++ b/index.html
@@ -174,6 +174,20 @@
                 podejście „od początku do końca”. Na platformie Oferteo moja firma
                 posiada ocenę ok. <strong>4,4/5</strong> na podstawie kilku opinii i potwierdzonych współprac.
             </p>
+            <div class="platform-badges">
+                <span class="platform-label">Opinie o mojej pracy znajdziesz także na:</span>
+                <a class="platform-badge"
+                   href="https://www.oferteo.pl/daniel-falkowski-tetris/firma/3031358"
+                   target="_blank" rel="noopener noreferrer">
+                    Oferteo
+                </a>
+                <a class="platform-badge"
+                   href="https://fixly.pl/profil/tetris-hxvr_vcm-"
+                   target="_blank" rel="noopener noreferrer">
+                    Fixly
+                </a>
+            </div>
+
             <div class="reviews-grid">
                 <article class="review-card">
                     <p class="review-text">
