--- a/index.html
+++ b/index.html
@@ -221,6 +221,51 @@
         </div>
     </section>
 
+    <!-- FAQ -->
+    <section id="faq" class="section section-alt">
+        <div class="container">
+            <h2>Najczęstsze pytania</h2>
+
+            <div class="faq-list">
+                <details class="faq-item">
+                    <summary>Ile trwa standardowy remont łazienki?</summary>
+                    <p>
+                        To zależy od metrażu i zakresu, ale przy pełnym remoncie łazienki
+                        3–5 m² zwykle jest to ok. 2–3 tygodni. Dokładny czas podaję po
+                        obejrzeniu pomieszczenia i ustaleniu materiałów.
+                    </p>
+                </details>
+
+                <details class="faq-item">
+                    <summary>Czy pomagasz w wyborze i zakupie materiałów?</summary>
+                    <p>
+                        Tak. Mogę zasugerować sprawdzone rozwiązania i konkretne produkty
+                        (płytki, armatura, chemia budowlana), a także pomóc w zamówieniu
+                        materiałów w sklepach lub hurtowniach.
+                    </p>
+                </details>
+
+                <details class="faq-item">
+                    <summary>Na jakim obszarze pracujesz?</summary>
+                    <p>
+                        Głównie Kraków i okolice: m.in. Rzeszotary, Skawina, Wieliczka,
+                        Myślenice i sąsiednie miejscowości. Przy większych zleceniach
+                        mogę dojechać trochę dalej – do ustalenia.
+                    </p>
+                </details>
+
+                <details class="faq-item">
+                    <summary>Jak wygląda wycena i umawianie terminu?</summary>
+                    <p>
+                        Po kontakcie telefonicznym lub mailowym umawiamy się na oględziny
+                        na miejscu. Po spotkaniu przygotowuję orientacyjną wycenę i
+                        proponuję wolny termin. Wszystkie szczegóły spisujemy w umowie.
+                    </p>
+                </details>
+            </div>
+        </div>
+    </section>
+
     <!-- KONTAKT -->
     <section id="contact" class="section">
         <div class="container">
