[ADD] lazy loading

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>TETRIS – remonty łazienek i wykończenia wnętrz | Kraków i okolice</title>
+    <link rel="icon" type="image/png" href="img/favicon.png">
     <meta name="description" content="TETRIS – Daniel Falkowski. Ponad 20 lat doświadczenia w remontach łazienek i wykończeniach wnętrz. Kraków i okolice. Kompleksowe realizacje, dokładność i terminowość.">
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -150,15 +151,15 @@
             <div class="projects-grid">
                 <!-- PODMIEŃ ŚCIEŻKI NA RZECZYWISTE ZDJĘCIA -->
                 <figure class="project-card">
-                    <img src="img/blackwhite.jpg" alt="Wykończona łazienka – płytki wielkoformatowe" />
+                    <img src="img/blackwhite.jpg" alt="Wykończona łazienka – płytki wielkoformatowe" loading="lazy"/>
                     <figcaption>Łazienka w mieszkaniu w Krakowie – płytki wielkoformatowe, prysznic typu walk-in.</figcaption>
                 </figure>
                 <figure class="project-card">
-                    <img src="img/wooden-bathroom.jpg" alt="Remont łazienki po zalaniu" />
+                    <img src="img/wooden-bathroom.jpg" alt="Remont łazienki po zalaniu" loading="lazy"/>
                     <figcaption>Łazienka po zalaniu – pełny remont, nowe instalacje i wykończenie.</figcaption>
                 </figure>
                 <figure class="project-card">
-                    <img src="img/b-remont.jpg" alt="Łazienka po poprzednim nieudanym remoncie" />
+                    <img src="img/b-remont.jpg" alt="Łazienka po poprzednim nieudanym remoncie" loading="lazy"/>
                     <figcaption>Poprawa po wcześniejszym nieudanym remoncie – prostowanie ścian, nowe płytki i biały montaż.</figcaption>
                 </figure>
             </div>
