[ADD] favicon website logo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>TETRIS – remonty łazienek i wykończenia wnętrz | Kraków i okolice</title>
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="icon" type="image/png" href="img/favicon-logo.png">
     <meta name="description" content="TETRIS – Daniel Falkowski. Ponad 20 lat doświadczenia w remontach łazienek i wykończeniach wnętrz. Kraków i okolice. Kompleksowe realizacje, dokładność i terminowość.">
     <link rel="stylesheet" href="style.css" />
 </head>
