[ADD] company logo

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta name="description" content="TETRIS – Daniel Falkowski. Ponad 20 lat doświadczenia w remontach łazienek i wykończeniach wnętrz. Kraków i okolice. Kompleksowe realizacje, dokładność i terminowość.">
     <link rel="stylesheet" href="style.css" />
 </head>
-<body>
 <header class="site-header">
     <div class="container header-inner">
-        <div class="logo">
-            <span class="logo-main">TETRIS</span>
-            <span class="logo-sub">Remonty i wykończenia</span>
-        </div>
+        <a href="#top" class="logo">
+            <img src="img/tetris-logo.png"
+                 alt="TETRIS – remonty i wykończenia"
+                 class="logo-image">
+        </a>
         <nav class="nav">
             <a href="#about">O mnie</a>
             <a href="#services">Oferta</a>
