--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>TETRIS – remonty łazienek i wykończenia wnętrz | Kraków i okolice</title>
-    <link rel="icon" type="image/png" href="img/favicon-logo.png">
+    <link rel="icon" type="image/png" href="img/favicon-tiles.png">
     <meta name="description" content="TETRIS – Daniel Falkowski. Ponad 20 lat doświadczenia w remontach łazienek i wykończeniach wnętrz. Kraków i okolice. Kompleksowe realizacje, dokładność i terminowość.">
     <link rel="stylesheet" href="style.css" />
 </head>
 <header class="site-header">
     <div class="container header-inner">
         <a href="#top" class="logo">
-            <img src="img/tetris-logo.png"
+            <img src="img/tetris-logo-light.png"
                  alt="TETRIS – remonty i wykończenia"
                  class="logo-image">
         </a>
